--- a/css/buttons.css
+++ b/css/buttons.css
@@ -3,8 +3,13 @@ button {
     background-color: transparent;
     background-repeat: no-repeat;
     background-position: center;
+    cursor: pointer;
     inline-size: 32px;
     block-size: 32px;
+}
+
+.button:active{
+    transform: scale(.9);
 }
 
 #play {
