--- a/css/index.css
+++ b/css/index.css
@@ -15,9 +15,50 @@ body {
 .wrapper{
     max-inline-size: 900px;
     margin: auto;
+    /* border: 5px dashed rgb(0, 4, 255); */
+}
+
+.player {
+    /* border: 5px dashed rgb(255, 136, 0); */
+    position: relative;
 }
 
 .player video{
     inline-size: 100%;
-    border: 2px solid yellow;
+    aspect-ratio: 16/9;
+    vertical-align: middle;
+    /* border: 5px dashed rgb(0, 255, 98); */
+}
+
+.player-title{
+    color: var(--White);
+    position: absolute;
+    inset-block-start: 10px;
+    inset-inline-start: 20px;
+    /* border: 5px dashed rgb(0, 195, 255); */
+    margin: 0;
+}
+
+.player-actions{
+    position: absolute;
+    inset-block-start: 1px;
+    /* border: 5px dashed rgb(238, 255, 0); */
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+
+.player-progress{
+    position: absolute;
+    inset-block-end: 0;
+    inset-inline: 0;
+    z-index: 2;
+    display: flex;
+    padding: 10px;
+}
+
+.player-progress input{
+    flex: 1;
 }
