--- a/css/index.css
+++ b/css/index.css
@@ -21,12 +21,14 @@ body {
 .player {
     /* border: 5px dashed rgb(255, 136, 0); */
     position: relative;
+    inset-block-start: 50px;
 }
 
 .player video{
     inline-size: 100%;
     aspect-ratio: 16/9;
     vertical-align: middle;
+    object-fit: cover;
     /* border: 5px dashed rgb(0, 255, 98); */
 }
 
@@ -48,6 +50,7 @@ body {
     justify-content: center;
     align-items: center;
     z-index: 2;
+    gap: 50px;
 }
 
 .player-progress{
@@ -61,4 +64,15 @@ body {
 
 .player-progress input{
     flex: 1;
+}
+
+.player-overlay{
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: 0.5s opacity;
+}
+
+.player:hover .player-overlay{
+    opacity: 1;
 }
